fixed class name typo for notifierdecorator instead of detector lol